     especially to acquisition wrappers.

     N.B:  ExtensionClassType already declares that it supports GC
     (via the Py_TPFLAGS_HAVE_GC flag), but does not appear to conform
     to the rules for such a type laid out in the Python docs:
     http://docs.python.org/api/supporting-cycle-detection.html

  Trunk only (unreleased)

    Restructuring

      - deprecated the zLOG module. Use Pythons 'logging' module instead.

      - replaced all zLOG occurences (expect the zLOG module itself) with 
        the 'logging' module

      - PluginIndexes/TextIndex is deprecated. Use ZCTextIndex instead

      - the 'StructuredText' module is deprecated. Use zope.structuredtext
        instead

      - removed ZopeTutorial (Elvis is now really dead)

      - ZClasses are deprecated and should no longer be used. In addition
        any code related to the ZClasses (re)distribution mechanism is
        removed.

      - ZGadyFlyDA/Gadfly is deprecated

      - deprecated OFS.content_types (to be removed in Zope 2.11) and
        replaced all occurences with zope.app.content_types 

      - OFS.content_types: moved code to zope.app.content_types and added
        method aliases

      - Using FastCGI is offically deprecated.

    Features added

      - Testing.makerequest: Added an 'environ' argument so
        clients can use mappings other than os.environ.

      - Updated to Docutils 0.4.0 

      - reStructuredText: The default value for the 'stylesheet'
        property has been changed from 'default.css' to None because
        there is no 'default.css' file by default. 

      - ZReST: rewritten render() method to integrate it smoothly
        with Docutils 0.4.0. The default value for the 'stylesheet'
        property has been changed from 'default.css' to None because
        there is no 'default.css' file by default. 

      - Added a "clock server" servertype which allows users to
        configure methods that should be called periodically as if